docs: mark Tier 1.2 as shipped in feature-roadmap.md